tests/run/error_generic_variant_type.out
tests/run/error_generic_variant_type.ig:4:26: error: field value type does not match the variant
